[package]
name = "event-countdown"
version = "0.1.0"
authors = ["Lee Thomas <leet944@gmail.com>"]
edition = "2018"
readme = "README.md"
license-file = "LICENSE"
keywords = ["cli", "utils", "utility", "utilities", "count", "event", "command line"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "2.33.3", features = ["yaml"] }
confy = "0.4.0"
dirs = "3.0"
rand = "0.8.0"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "countdown"
path = "main.rs"
