[package]
name = "event-countdown"
version = "1.0.4"
authors = ["Lee Thomas <leet944@gmail.com>"]
description = "Countdown to events you're looking forward to."
edition = "2018"
readme = "README.md"
license-file = "LICENSE"
keywords = ["cli", "utils", "utility", "count", "event"]
categories = ["command-line-utilities"]
homepage = "https://github.com/leethomas/countdown"
documentation = "https://github.com/leethomas/countdown"
repository = "https://github.com/leethomas/countdown"

[dependencies]
clap = { version = "2.33.3", features = ["yaml"] }
confy = "0.4.0"
dirs = "3.0"
rand = "0.8.0"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "countdown"
path = "main.rs"
